# api-automation-petstore-swagger

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: petstore-ci.yml
scripts/: sandbox.py
src/framework/core/: base_client.py  config.py
src/framework/models/: pet.py
src/framework/services/: pet_service.py
tests/: conftest.py
tests/contract/: test_contract.py
tests/functional/: test_petstore.py
